<resources>
    <string name="app_name">PaPel App</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="log_in">Log In</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="display_name">Display Name</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_your_user_name">Enter your User Name</string>
    <string name="our_app">Our App</string>
    <string name="log_out">Log Out</string>
    <string name="calendar">Calendar</string>
    <string name="add_note">Add Note</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="mail">Mail</string>
    <string name="todo">TODO</string>
    <string name="title_activity_calendar">calendar</string>
    <string name="currentdate">Current Date</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="settings">Settings</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="add_a_note">Add a note</string>
    <string name="my_notes">My Notes</string>
    <string name="mylessons">mylessons</string>
    <string name="mylesson">My Lessons</string>
    <string name="mylesson1">lesson1</string>
    <string name="add_lesson1">Lesson1</string>
    <string name="add_lesson2">Lesson2</string>
    <string name="add_lesson3">Lesson3</string>
    <string name="add_lesson2">Lesson2</string>
</resources>
