<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_custom_calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLetters"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/backwardButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@mipmap/button_backward"
            android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="4dp"
                android:text="@string/currentdate"
                android:id="@+id/current_Date"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_weight="3"/>

        <ImageButton
            android:id="@+id/forwardButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@mipmap/button_forward"
            android:contentDescription="@string/todo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thu"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView"
        android:numColumns="7"
    />
</LinearLayout>