<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LessonsActivity">

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="414dp"
        android:layout_height="25dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="4dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="108dp"
        android:layout_height="97dp"
        android:contentDescription="@string/add_lesson"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/My Lessons"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="11dp"
        android:text="@string/mylesson"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/main_page_toolbar"
        app:layout_constraintTop_toTopOf="@+id/main_page_toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="412dp"
        android:layout_height="504dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_page_toolbar"
        app:layout_constraintVertical_bias="0.35" />

    <CheckedTextView
        android:id="@+id/lesson3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lesson3"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/textureView"
        app:layout_constraintTop_toTopOf="@+id/textureView"
        app:layout_constraintVertical_bias="0.477" />

    <CheckedTextView
        android:id="@+id/2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lesson2"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/textureView"
        app:layout_constraintTop_toTopOf="@+id/textureView"
        app:layout_constraintVertical_bias="0.343" />

    <CheckedTextView
        android:id="@+id/lesson1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lesson1"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/textureView"
        app:layout_constraintTop_toTopOf="@+id/textureView"
        app:layout_constraintVertical_bias="0.218" />

</androidx.constraintlayout.widget.ConstraintLayout>